# Anox

./: LICENSE  README.md  anox.code-workspace
server/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
server/anox/: manage.py
server/anox/anox/: asgi.py  urls.py  wsgi.py
server/anox/anox/settings/: .gitignore  base.py  local.py  test.py
server/anox/timetracker/: admin.py  apps.py  filters.py  managers.py  models.py  querysets.py  serializers.py  signals.py  tag_views.py  test_models.py  test_querysets.py  test_utils.py  tests.py  urls.py  utils.py  views.py
server/anox/timetracker/management/commands/: importdata.py
server/anox/timetracker/migrations/: 0001_initial.py
server/anox/timetracker/static/timetracker/: styles.css
server/anox/timetracker/templates/timetracker/: index.html
server/anox/timetracker/templates/timetracker/time-entry/: index.html
server/anox/timetracker/tests/: fixtures.py  test_models.py  test_querysets.py  test_utils.py
web/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
web/config/: webpack.config.js
web/src/: constants.ts  index.css  index.html  index.tsx  routeTree.gen.ts
web/src/auth/: authContext.tsx
web/src/components/: spinner.tsx
web/src/hooks/: useFetchHook.ts
web/src/network/: api.ts  auth-api.ts  network.ts  profile-api.ts  tag-api.ts  types.ts  utils.ts
web/src/routes/: __root.tsx  _authenticated.tsx  login.tsx
web/src/routing-extras/: not-found.tsx  router.tsx
web/src/util/: color.test.ts  color.ts  (+5 more)
(+27 files in other folders)
