[tool.poetry]
name = "anox-server"
version = "0.1.0"
description = ""
authors = ["Andrey Melnikov <vafilor@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
markdown = "^3.6"
django-filter = "^24.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
python-dotenv = "^1.0.1"
django-debug-toolbar = "^4.3.0"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework-camel-case = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
